# Macau-multiplayer-card-game

./: CMakeLists.txt  README.md  main.cpp  multiPlayerGame.sln
multiPlayerGame/: Client.cpp  Client.h  Deck.cpp  Deck.h  Player.cpp  Player.h  Server.cpp  Server.h  ServerAndClient.cpp  ServerAndClient.h  main.cpp  multiPlayerGame.vcxproj  multiPlayerGame.vcxproj.filters
src/: Card.cpp  Card.h  Client.cpp  Client.h  PlayerCards.cpp  PlayerCards.h
src/cards/: Card.cpp  Card.h  CardsImages.cpp  CardsImages.h  Deck.cpp  Deck.h  PlayerCards.cpp  PlayerCards.h
src/connection/: Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h
src/game/: GameState.cpp  GameState.h  GameStatus.cpp  GameStatus.h
src/graphics/: Button.cpp  Button.h  CardsImages.cpp  CardsImages.h  GUI.cpp  GUI.h
